k8s/02-database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app-demo-database
  namespace: demos
  labels:
    app: laravel-app-demo-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel-app-demo-database
  template:
    metadata:
      labels:
        app: laravel-app-demo-database
    spec:
      automountServiceAccountToken: false
      containers:
        - name: laravel-app-demo-database
          image: mariadb:10.8.3
          imagePullPolicy: Always
          resources:
            requests:
              memory: "100Mi"
              cpu: "0.1"
            limits:
              memory: "250Mi"
              cpu: "0.3"
              ephemeral-storage: 100Mi
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: persistent-volume
              mountPath: /var/lib/mysql
              subPath: database
      volumes:
        - name: persistent-volume
          persistentVolumeClaim:
            claimName: laravel-app-demo
