k8s/03-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app-demo
  namespace: demos
  labels:
    app: laravel-app-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: laravel-app-demo
  template:
    metadata:
      labels:
        app: laravel-app-demo
    spec:
      automountServiceAccountToken: false
      containers:
        - name: laravel-app-demo
          #image: a2odev/laravel-app-demo
          image: 172.29.81.0:8083/nexus/docker/laravel-app-demo/staging/laravel-app-demo
          imagePullPolicy: Always
          resources:
            requests:
              memory: "150Mi"
              cpu: "0.1"
            limits:
              memory: "250Mi"
              cpu: "0.3"
              ephemeral-storage: 100Mi
          ports:
            - containerPort: 80
