k8s/05-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app-deployment
  namespace: demos
  labels:
    app: laravel-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel-app
  template:
    metadata:
      labels:
        app: laravel-app
    spec:
      automountServiceAccountToken: false
      containers:
        - name: laravel-app
          image: laravel-app-demo:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "250Mi"
              cpu: "0.5"
            limits:
              memory: "1Gi"
              cpu: "1"
              ephemeral-storage: 5Gi
          ports:
            - containerPort: 80
          volumeMounts:
            - name: persistent-volume
              mountPath: /data
              subPath: demos/laravel/app
          lifecycle:
            postStart:
              exec:
                command: [ "/bin/sh", "-c", "php artisan passport:keys" ]
      volumes:
        - name: persistent-volume
          persistentVolumeClaim:
            claimName: shared-pvc
