k8s/05-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-app-demo
  namespace: demos
spec:
  selector:
    app: laravel-app-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
