k8s/05-database-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: demo
spec:
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3306
  type: ClusterIP
