k8s/06-database-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: demos
spec:
  selector:
    app: laravel-database
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
