k8s/07-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-app-svc
  namespace: demos
spec:
  selector:
    app: laravel-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
