k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-laravel-app-demo
  namespace: demos
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: laravel-app-demo.a2odev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel-app-demo
                port:
                  number: 80
